--- a/index.html
+++ b/index.html
@@ -83,18 +83,30 @@
       <section class="opini">
             <div class="titul"><h1>Nuestros usuarios dicen...</h1></div>
             <div class="carrul">   
-                        <div id="opi" >
-                              <img src="./img/cara6.jpg">
+                  <div id="card-user" >
+                        <div class="head">
+                        <img src="./img/cara6.jpg">
+                        <div class="estrellas">
                               <h5>Diego rodriguez</h5>
-                              <p>Lorem ipsum dolor sit amet, consectet
-                                     adipiscing elit. Elit quis enim ultricies 
-                                     ullamcorper.Nunc aenean auctor vel 
-                                     diam dictum.
+                              <div>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    </div>
+                        </div>
+                        </div>
+                        <div class="cuerpo">
+                              <p>Lorem ipsum dolor sit amet, consectet adipiscing elit.
+                                    Elit quis enim ultricies ullamcorper.
+                                    Nunc aenean auctor vel diam dictum.
                               </p>
                         </div>
+                  </div>
                         <div id="opi">
 
-                              <img src="">
+                              <img src="./img/cara6.jpg">
                               <h5>Diana Garcìa</h5>
 
                               <p>Lorem ipsum dolor sit amet, consectet adipiscing elit.
@@ -103,7 +115,7 @@
                                     
                         </div>
                         <div id="opi">
-                        <img src="">
+                        <img src="./img/cara6.jpg">
                               <h5>Diego rodriguez</h5>
 
                               <p>Lorem ipsum dolor sit amet, consectet adipiscing elit.
